--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <div class="movie-block">
                       <i class="icon f7-icons">clock_fill</i>
                       <div class="movie-block-name timeWalk">Gyalog</div>
-                      <div class="movie-block-text">2 perc</div>
+                      <div class="movie-block-text walkMin">2 perc</div>
                     </div>
                     <div class="movie-block">
                       <i class="icon f7-icons">star_fill</i>
@@ -317,8 +317,12 @@
                 >
                   <i class="icon f7-icons">map_pin_ellipse</i>
                   <div class="link-banner-text">
-                    <div class="link-banner-title">Útvonal tervezés</div>
-                    <div class="link-banner-subtitle">Google térképen</div>
+                    <div class="link-banner-title navigationTitle">
+                      Útvonal tervezés
+                    </div>
+                    <div class="link-banner-subtitle navigationDesc">
+                      Google térképen
+                    </div>
                   </div>
                 </a>
               </div>
@@ -345,14 +349,16 @@
                 >
                   <i class="icon f7-icons">map_pin_ellipse</i>
                   <div class="link-banner-text">
-                    <div class="link-banner-title">Útvonal tervezés</div>
-                    <div class="link-banner-subtitle">Google térképen</div>
+                    <div class="link-banner-title navigationTitle">
+                      Útvonal tervezés
+                    </div>
+                    <div class="link-banner-subtitle navigationDesc">
+                      Google térképen
+                    </div>
                   </div>
                 </a>
               </div>
-              <h1 style="padding-top: 10px; text-align: center">
-                Környékbeli welness
-              </h1>
+              <h1 style="padding-top: 10px; text-align: center">Welness</h1>
               <div class="card">
                 <div class="card-image">
                   <img
@@ -371,8 +377,12 @@
                 >
                   <i class="icon f7-icons">map_pin_ellipse</i>
                   <div class="link-banner-text">
-                    <div class="link-banner-title">Útvonal tervezés</div>
-                    <div class="link-banner-subtitle">Google térképen</div>
+                    <div class="link-banner-title navigationTitle">
+                      Útvonal tervezés
+                    </div>
+                    <div class="link-banner-subtitle navigationDesc">
+                      Google térképen
+                    </div>
                   </div>
                 </a>
               </div>
@@ -389,8 +399,6 @@
                   />
                 </div>
                 <h2 style="text-align: center">Orvosi rendelő</h2>
-                <!-- <div class="card-footer card-big-footer">
-                           </div> -->
                 <a
                   target="_blank"
                   href="https://www.google.com/maps/dir/46.7012078,25.507957/Rendel%C5%91,+Joseni/@46.7016475,25.5051203,18z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474aedd01e5b98d3:0xca59c7a9318e3753!2m2!1d25.5048985!2d46.7014584!3e0?entry=ttu"
@@ -399,8 +407,12 @@
                 >
                   <i class="icon f7-icons">map_pin_ellipse</i>
                   <div class="link-banner-text">
-                    <div class="link-banner-title">Útvonal tervezés</div>
-                    <div class="link-banner-subtitle">Google térképen</div>
+                    <div class="link-banner-title navigationTitle">
+                      Útvonal tervezés
+                    </div>
+                    <div class="link-banner-subtitle navigationDesc">
+                      Google térképen
+                    </div>
                   </div>
                 </a>
               </div>
@@ -422,8 +434,12 @@
                 >
                   <i class="icon f7-icons">map_pin_ellipse</i>
                   <div class="link-banner-text">
-                    <div class="link-banner-title">Útvonal tervezés</div>
-                    <div class="link-banner-subtitle">Google térképen</div>
+                    <div class="link-banner-title navigationTitle">
+                      Útvonal tervezés
+                    </div>
+                    <div class="link-banner-subtitle navigationDesc">
+                      Google térképen
+                    </div>
                   </div>
                 </a>
               </div>
@@ -445,8 +461,12 @@
                 >
                   <i class="icon f7-icons">map_pin_ellipse</i>
                   <div class="link-banner-text">
-                    <div class="link-banner-title">Útvonal tervezés</div>
-                    <div class="link-banner-subtitle">Google térképen</div>
+                    <div class="link-banner-title navigationTitle">
+                      Útvonal tervezés
+                    </div>
+                    <div class="link-banner-subtitle navigationDesc">
+                      Google térképen
+                    </div>
                   </div>
                 </a>
               </div>
