--- a/index.html
+++ b/index.html
@@ -368,7 +368,9 @@
                     style="height: 230px !important"
                   />
                 </div>
-                <h2 style="text-align: center">Gyergyószentmiklósi uszoda</h2>
+                <h2 class="welnessGheorgheni" style="text-align: center">
+                  Gyergyószentmiklósi uszoda
+                </h2>
                 <a
                   target="_blank"
                   href="https://www.google.com/maps/dir/46.7012078,25.507957/Gyergy%C3%B3szentmikl%C3%B3si+tanuszoda,+Strada+Ghindei+18-20,+Gheorgheni+535500/@46.7231229,25.5100492,13z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474aedbb809c95d7:0xa84e11c000d1b1ec!2m2!1d25.5909758!2d46.7271933!3e0?entry=ttu"
@@ -386,22 +388,27 @@
                   </div>
                 </a>
               </div>
-              <h1 style="padding-top: 10px; text-align: center">
+              <h1
+                class="healthService"
+                style="padding-top: 10px; text-align: center"
+              >
                 Egészségügyi szolgáltatások
               </h1>
               <div class="card">
                 <div class="card-image">
                   <img
-                    src="img/cards/poli3.jpeg"
+                    src="img/cards/surg.png"
                     alt=""
                     class="card-big-footer-image"
                     style="height: 230px !important"
                   />
                 </div>
-                <h2 style="text-align: center">Orvosi rendelő</h2>
+                <h2 class="mediucalCenterTitle" style="text-align: center">
+                  Gyergyószentmiklósi Városi Kórház
+                </h2>
                 <a
                   target="_blank"
-                  href="https://www.google.com/maps/dir/46.7012078,25.507957/Rendel%C5%91,+Joseni/@46.7016475,25.5051203,18z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474aedd01e5b98d3:0xca59c7a9318e3753!2m2!1d25.5048985!2d46.7014584!3e0?entry=ttu"
+                  href="https://www.google.com/maps/dir/46.7012078,25.507957/Gyergy%C3%B3szentmikl%C3%B3si+V%C3%A1rosi+K%C3%B3rh%C3%A1z,+Bulevardul+Lacu+Rosu,+Gheorgheni+535500/@46.7232184,25.4706999,12z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474aec9c2bb02523:0xaaa4a517186f65e3!2m2!1d25.6022926!2d46.7234873!3e0?entry=ttu"
                   class="link external link-banner dark-theme-green link-chevron"
                   style="margin-bottom: 0px !important"
                 >
@@ -425,7 +432,9 @@
                     style="height: 230px !important"
                   />
                 </div>
-                <h2 style="text-align: center">Gyógyszertár</h2>
+                <h2 class="pharmacy" style="text-align: center">
+                  Gyógyszertár
+                </h2>
                 <a
                   target="_blank"
                   href="https://www.google.com/maps/dir/46.7012078,25.507957/FARMACIA+POLI-MED-ANNA+JOSENI,+Strada+Gheorgheni,+Joseni/@46.7016475,25.5042561,17z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474aed9827930ef9:0xe3a6755537779025!2m2!1d25.5057146!2d46.7018269!3e0?entry=ttu"
@@ -452,7 +461,9 @@
                     style="height: 230px !important"
                   />
                 </div>
-                <h2 style="text-align: center">Gyógyszertár</h2>
+                <h2 class="pharmacy" style="text-align: center">
+                  Gyógyszertár
+                </h2>
                 <a
                   target="_blank"
                   href="https://www.google.com/maps/dir/46.7012078,25.507957/Sanit+Farm,+Joseni/@46.7015148,25.5042863,18z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474aec4be0a4e87b:0x6a391392cba6cf01!2m2!1d25.5032675!2d46.7009423!3e0?entry=ttu"
