--- a/index.html
+++ b/index.html
@@ -486,8 +486,56 @@
         </div>
         <div class="view view-init tab" id="tab-3">
           <div class="page">
+            <div
+              class="navbar"
+              style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+            >
+              <div class="navbar-bg"></div>
+              <div class="navbar-inner">
+                <div class="left">
+                  <h3 class="changeName">Fűzfa Apartman</h3>
+                </div>
+                <div class="right langWrap">
+                  <a
+                    href="#"
+                    class="link icon-only navbar-profile"
+                    language="hungarian"
+                  >
+                    <img
+                      style="height: 25px; width: 25px"
+                      src="img/cards/flaghu.png"
+                      alt=""
+                    />
+                  </a>
+                  <a
+                    href="#"
+                    class="link icon-only navbar-profile"
+                    language="english"
+                  >
+                    <img
+                      style="height: 25px; width: 25px"
+                      src="img/cards/flagen.webp"
+                      alt=""
+                    />
+                  </a>
+                  <a
+                    href="#"
+                    class="link icon-only navbar-profile"
+                    language="romanian"
+                  >
+                    <img
+                      style="height: 25px; width: 25px"
+                      src="img/cards/flagro.png"
+                      alt=""
+                    />
+                  </a>
+                </div>
+              </div>
+            </div>
             <div class="page-content">
-              <h1 style="text-align: center">Családi programajánló</h1>
+              <h1 class="programsTitle" style="text-align: center">
+                Programajánló
+              </h1>
               <div class="card">
                 <div class="card-image">
                   <img
@@ -515,8 +563,12 @@
                   >
                     <i class="icon f7-icons">map_pin_ellipse</i>
                     <div class="link-banner-text">
-                      <div class="link-banner-title">Útvonal tervezés</div>
-                      <div class="link-banner-subtitle">Google térképen</div>
+                      <div class="link-banner-title navigationTitle">
+                        Útvonal tervezés
+                      </div>
+                      <div class="link-banner-subtitle navigationDesc">
+                        Google térképen
+                      </div>
                     </div>
                   </a>
                 </div>
@@ -548,8 +600,12 @@
                   >
                     <i class="icon f7-icons">map_pin_ellipse</i>
                     <div class="link-banner-text">
-                      <div class="link-banner-title">Útvonal tervezés</div>
-                      <div class="link-banner-subtitle">Google térképen</div>
+                      <div class="link-banner-title navigationTitle">
+                        Útvonal tervezés
+                      </div>
+                      <div class="link-banner-subtitle navigationDesc">
+                        Google térképen
+                      </div>
                     </div>
                   </a>
                 </div>
@@ -581,8 +637,12 @@
                   >
                     <i class="icon f7-icons">map_pin_ellipse</i>
                     <div class="link-banner-text">
-                      <div class="link-banner-title">Útvonal tervezés</div>
-                      <div class="link-banner-subtitle">Google térképen</div>
+                      <div class="link-banner-title navigationTitle">
+                        Útvonal tervezés
+                      </div>
+                      <div class="link-banner-subtitle navigationDesc">
+                        Google térképen
+                      </div>
                     </div>
                   </a>
                 </div>
@@ -614,8 +674,12 @@
                   >
                     <i class="icon f7-icons">map_pin_ellipse</i>
                     <div class="link-banner-text">
-                      <div class="link-banner-title">Útvonal tervezés</div>
-                      <div class="link-banner-subtitle">Google térképen</div>
+                      <div class="link-banner-title navigationTitle">
+                        Útvonal tervezés
+                      </div>
+                      <div class="link-banner-subtitle navigationDesc">
+                        Google térképen
+                      </div>
                     </div>
                   </a>
                 </div>
@@ -647,8 +711,12 @@
                   >
                     <i class="icon f7-icons">map_pin_ellipse</i>
                     <div class="link-banner-text">
-                      <div class="link-banner-title">Útvonal tervezés</div>
-                      <div class="link-banner-subtitle">Google térképen</div>
+                      <div class="link-banner-title navigationTitle">
+                        Útvonal tervezés
+                      </div>
+                      <div class="link-banner-subtitle navigationDesc">
+                        Google térképen
+                      </div>
                     </div>
                   </a>
                 </div>
@@ -680,8 +748,12 @@
                   >
                     <i class="icon f7-icons">map_pin_ellipse</i>
                     <div class="link-banner-text">
-                      <div class="link-banner-title">Útvonal tervezés</div>
-                      <div class="link-banner-subtitle">Google térképen</div>
+                      <div class="link-banner-title navigationTitle">
+                        Útvonal tervezés
+                      </div>
+                      <div class="link-banner-subtitle navigationDesc">
+                        Google térképen
+                      </div>
                     </div>
                   </a>
                 </div>
@@ -712,8 +784,12 @@
                   >
                     <i class="icon f7-icons">map_pin_ellipse</i>
                     <div class="link-banner-text">
-                      <div class="link-banner-title">Útvonal tervezés</div>
-                      <div class="link-banner-subtitle">Google térképen</div>
+                      <div class="link-banner-title navigationTitle">
+                        Útvonal tervezés
+                      </div>
+                      <div class="link-banner-subtitle navigationDesc">
+                        Google térképen
+                      </div>
                     </div>
                   </a>
                 </div>
@@ -744,8 +820,12 @@
                   >
                     <i class="icon f7-icons">map_pin_ellipse</i>
                     <div class="link-banner-text">
-                      <div class="link-banner-title">Útvonal tervezés</div>
-                      <div class="link-banner-subtitle">Google térképen</div>
+                      <div class="link-banner-title navigationTitle">
+                        Útvonal tervezés
+                      </div>
+                      <div class="link-banner-subtitle navigationDesc">
+                        Google térképen
+                      </div>
                     </div>
                   </a>
                 </div>
@@ -777,8 +857,12 @@
                   >
                     <i class="icon f7-icons">map_pin_ellipse</i>
                     <div class="link-banner-text">
-                      <div class="link-banner-title">Útvonal tervezés</div>
-                      <div class="link-banner-subtitle">Google térképen</div>
+                      <div class="link-banner-title navigationTitle">
+                        Útvonal tervezés
+                      </div>
+                      <div class="link-banner-subtitle navigationDesc">
+                        Google térképen
+                      </div>
                     </div>
                   </a>
                 </div>
@@ -809,8 +893,12 @@
                   >
                     <i class="icon f7-icons">map_pin_ellipse</i>
                     <div class="link-banner-text">
-                      <div class="link-banner-title">Útvonal tervezés</div>
-                      <div class="link-banner-subtitle">Google térképen</div>
+                      <div class="link-banner-title navigationTitle">
+                        Útvonal tervezés
+                      </div>
+                      <div class="link-banner-subtitle navigationDesc">
+                        Google térképen
+                      </div>
                     </div>
                   </a>
                 </div>
@@ -841,8 +929,12 @@
                   >
                     <i class="icon f7-icons">map_pin_ellipse</i>
                     <div class="link-banner-text">
-                      <div class="link-banner-title">Útvonal tervezés</div>
-                      <div class="link-banner-subtitle">Google térképen</div>
+                      <div class="link-banner-title navigationTitle">
+                        Útvonal tervezés
+                      </div>
+                      <div class="link-banner-subtitle navigationDesc">
+                        Google térképen
+                      </div>
                     </div>
                   </a>
                 </div>
@@ -875,8 +967,12 @@
                   >
                     <i class="icon f7-icons">map_pin_ellipse</i>
                     <div class="link-banner-text">
-                      <div class="link-banner-title">Útvonal tervezés</div>
-                      <div class="link-banner-subtitle">Google térképen</div>
+                      <div class="link-banner-title navigationTitle">
+                        Útvonal tervezés
+                      </div>
+                      <div class="link-banner-subtitle navigationDesc">
+                        Google térképen
+                      </div>
                     </div>
                   </a>
                 </div>
