--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                     href="http://www.medveles.eu"
                     class="button button-fill button-round color-dark external"
                   >
-                    További információ
+                    <span class="programInfBtn">További információ</span>
                     <i class="icon f7-icons">arrow_right</i>
                   </a>
                   <a
@@ -589,7 +589,7 @@
                     href="https://www.facebook.com/people/Babusgat%C3%B3-%C3%81llatsimogat%C3%B3-%C3%A9s-%C3%81llatpark-Zetev%C3%A1ralj%C3%A1n/100067485452657/?ref=page_internal"
                     class="button button-fill button-round color-dark external"
                   >
-                    További információ
+                    <span class="programInfBtn">További információ</span>
                     <i class="icon f7-icons">arrow_right</i>
                   </a>
                   <a
@@ -626,7 +626,7 @@
                     href="https://www.facebook.com/boblacurosu"
                     class="button button-fill button-round color-dark external"
                   >
-                    További információ
+                    <span class="programInfBtn">További információ</span>
                     <i class="icon f7-icons">arrow_right</i>
                   </a>
                   <a
@@ -663,7 +663,7 @@
                     href="https://lolopark.ro/hu/"
                     class="button button-fill button-round color-dark external"
                   >
-                    További információ
+                    <span class="programInfBtn">További információ</span>
                     <i class="icon f7-icons">arrow_right</i>
                   </a>
                   <a
@@ -700,7 +700,7 @@
                     href="https://www.facebook.com/zetekarting/"
                     class="button button-fill button-round color-dark external"
                   >
-                    További információ
+                    <span class="programInfBtn">További információ</span>
                     <i class="icon f7-icons">arrow_right</i>
                   </a>
                   <a
@@ -737,7 +737,8 @@
                     href="/alfalvi-templom/"
                     class="button button-fill button-round color-dark"
                   >
-                    Tovább olvasom
+                    <span class="readMoreBtn"> Tovább olvasom </span>
+
                     <i class="icon f7-icons">arrow_right</i>
                   </a>
                   <a
@@ -773,7 +774,7 @@
                     href="/lazar-kastely/"
                     class="button button-fill button-round color-dark"
                   >
-                    Tovább olvasom
+                    <span class="readMoreBtn"> Tovább olvasom </span>
                     <i class="icon f7-icons">arrow_right</i>
                   </a>
                   <a
@@ -809,7 +810,7 @@
                     href="/csiksomlyoi-templom/"
                     class="button button-fill button-round color-dark"
                   >
-                    Tovább olvasom
+                    <span class="readMoreBtn"> Tovább olvasom </span>
                     <i class="icon f7-icons">arrow_right</i>
                   </a>
                   <a
@@ -846,7 +847,7 @@
                     href="/gyilkos-to/"
                     class="button button-fill button-round color-dark"
                   >
-                    Tovább olvasom
+                    <span class="readMoreBtn"> Tovább olvasom </span>
                     <i class="icon f7-icons">arrow_right</i>
                   </a>
                   <a
@@ -882,7 +883,7 @@
                     href="/szent-anna-to/"
                     class="button button-fill button-round color-dark"
                   >
-                    Tovább olvasom
+                    <span class="readMoreBtn"> Tovább olvasom </span>
                     <i class="icon f7-icons">arrow_right</i>
                   </a>
                   <a
@@ -918,7 +919,7 @@
                     href="/sugo-barlang/"
                     class="button button-fill button-round color-dark"
                   >
-                    Tovább olvasom
+                    <span class="readMoreBtn"> Tovább olvasom </span>
                     <i class="icon f7-icons">arrow_right</i>
                   </a>
                   <a
@@ -956,7 +957,7 @@
                     href="/medve-to/"
                     class="button button-fill button-round color-dark"
                   >
-                    Tovább olvasom
+                    <span class="readMoreBtn"> Tovább olvasom </span>
                     <i class="icon f7-icons">arrow_right</i>
                   </a>
                   <a
