--- a/index.html
+++ b/index.html
@@ -256,8 +256,15 @@
                   tisztítószerek, valamint szépségápolási termékek és italok is
                   rendelkezésünkre állnak.
                 </p>
+                <div class="card-image">
+                  <img src="img/cards/sarkimap.png" alt="" />
+                </div>
                 <a
-                  style="margin: 0px !important"
+                  style="
+                    margin: 0px !important;
+                    border-top-left-radius: 0px;
+                    border-top-right-radius: 0px;
+                  "
                   target="_blank"
                   href="https://www.google.com/maps/dir/46.7012078,25.507957/Sarki+%C3%9Czlet+--+%C3%96nkiszolg%C3%A1l%C3%B3,+Strada+Ciumani,+Joseni+537130/@46.700903,25.5058714,17.41z/data=!4m9!4m8!1m0!1m5!1m1!1s0x474aedd1cd731fd3:0x12633330c2064bd1!2m2!1d25.5066263!2d46.7004413!3e2?entry=ttu"
                   class="link external link-banner dark-theme-green link-chevron"
