--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
               <h1 style="text-align: center" class="welcomeTitle">
                 Szeretettel üdvözlünk!
               </h1>
-              <div class="card">
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-image">
                   <img
                     src="img/cards/me.jpg"
@@ -101,7 +104,10 @@
                   </p>
                 </div>
               </div>
-              <div class="card">
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-footer card-big-footer">
                   <h2 class="checkInOut">Bejelentkezés és kijelentkezés</h2>
                   <p class="checkIn" style="margin: 0px; padding-top: 15px">
@@ -119,7 +125,10 @@
                   </p>
                 </div>
               </div>
-              <div class="card">
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-footer card-big-footer">
                   <h2 class="list-title impInfo">Fontos tudnivalók</h2>
                   <p class="impInfo1">
@@ -286,7 +295,10 @@
               >
                 Környékbeli ajánlott éttermek
               </h1>
-              <div class="card">
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-image">
                   <img
                     src="img/cards/palya.png"
@@ -333,7 +345,7 @@
                   </div>
                 </a>
               </div>
-              <!-- <div class="card">
+              <!-- <div class="card" style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;">
                 <div class="card-image">
                   <img
                     src="img/cards/basa.jpeg"
@@ -366,7 +378,10 @@
                 </a>
               </div> -->
               <h1 style="padding-top: 10px; text-align: center">Welness</h1>
-              <div class="card">
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-image">
                   <img
                     src="img/cards/weln.jpeg"
@@ -401,7 +416,10 @@
               >
                 Egészségügyi szolgáltatások
               </h1>
-              <div class="card">
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-image">
                   <img
                     src="img/cards/surg.png"
@@ -430,7 +448,10 @@
                   </div>
                 </a>
               </div>
-              <div class="card">
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-image">
                   <img
                     src="img/cards/poli1.jpeg"
@@ -459,7 +480,10 @@
                   </div>
                 </a>
               </div>
-              <div class="card">
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-image">
                   <img
                     src="img/cards/poli2.jpeg"
@@ -543,7 +567,10 @@
               <h1 class="programsTitle" style="text-align: center">
                 Programajánló
               </h1>
-              <div class="card">
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-image">
                   <img
                     src="img/cards/medveles.png"
@@ -580,7 +607,10 @@
                   </a>
                 </div>
               </div>
-              <div class="card">
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-image">
                   <img
                     src="img/cards/babusgato.jpeg"
@@ -617,7 +647,10 @@
                   </a>
                 </div>
               </div>
-              <div class="card">
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-image">
                   <img
                     src="img/cards/bob.jpeg"
@@ -654,7 +687,10 @@
                   </a>
                 </div>
               </div>
-              <div class="card">
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-image">
                   <img
                     src="img/cards/lolo.jpeg"
@@ -691,7 +727,10 @@
                   </a>
                 </div>
               </div>
-              <div class="card">
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-image">
                   <img
                     src="img/cards/gokart.jpeg"
@@ -729,7 +768,10 @@
                 </div>
               </div>
               <h1 style="text-align: center">Kulturális látnivalók</h1>
-              <div class="card">
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-image">
                   <img
                     src="img/cards/templom.jpeg"
@@ -766,7 +808,10 @@
                   </a>
                 </div>
               </div>
-              <div class="card">
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-image">
                   <img
                     src="img/cards/laz.jpeg"
@@ -802,7 +847,10 @@
                   </a>
                 </div>
               </div>
-              <div class="card">
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-image">
                   <img
                     src="img/cards/csiktemp.jpeg"
@@ -839,7 +887,10 @@
                 </div>
               </div>
               <h1 style="text-align: center">Természeti csodák</h1>
-              <div class="card">
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-image">
                   <img
                     src="img/cards/gyilkto.jpeg"
@@ -875,7 +926,10 @@
                   </a>
                 </div>
               </div>
-              <div class="card">
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-image">
                   <img
                     src="img/cards/annato.jpeg"
@@ -911,7 +965,10 @@
                   </a>
                 </div>
               </div>
-              <div class="card">
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-image">
                   <img
                     src="img/cards/sugo_barlang.jpg.png"
@@ -947,7 +1004,10 @@
                   </a>
                 </div>
               </div>
-              <div class="card">
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-image">
                   <img
                     src="img/cards/medveto.png"
@@ -1004,7 +1064,10 @@
                 </p>
               </div>
               <hr />
-              <div class="card">
+              <div
+                class="card"
+                style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+              >
                 <div class="card-image">
                   <img
                     src="img/cards/coffegft.png"
