--- a/index.html
+++ b/index.html
@@ -1050,9 +1050,54 @@
         </div>
         <div class="view view-init tab" id="tab-4">
           <div class="page">
+            <div
+              class="navbar"
+              style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
+            >
+              <div class="navbar-bg"></div>
+              <div class="navbar-inner">
+                <div class="left">
+                  <h3 class="changeName">Fűzfa Apartman</h3>
+                </div>
+                <div class="right langWrap">
+                  <a
+                    href="#"
+                    class="link icon-only navbar-profile"
+                    language="hungarian"
+                  >
+                    <img
+                      style="height: 25px; width: 25px"
+                      src="img/cards/flaghu.png"
+                      alt=""
+                    />
+                  </a>
+                  <a
+                    href="#"
+                    class="link icon-only navbar-profile"
+                    language="english"
+                  >
+                    <img
+                      style="height: 25px; width: 25px"
+                      src="img/cards/flagen.webp"
+                      alt=""
+                    />
+                  </a>
+                  <a
+                    href="#"
+                    class="link icon-only navbar-profile"
+                    language="romanian"
+                  >
+                    <img
+                      style="height: 25px; width: 25px"
+                      src="img/cards/flagro.png"
+                      alt=""
+                    />
+                  </a>
+                </div>
+              </div>
+            </div>
             <div class="page-content">
-              <h1 style="text-align: center">Ajándék</h1>
-              <div class="information-block">
+              <!-- <div class="information-block">
                 <img src="img/cards/offer.png" alt="" />
                 <h2>Kedvezmény!</h2>
                 <p>
@@ -1062,8 +1107,8 @@
                   ajánlásodra érkeznek, akkor neked a következő foglaláskor
                   10%-os kedvezmény jár. :)
                 </p>
-              </div>
-              <hr />
+              </div> -->
+
               <div
                 class="card"
                 style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px"
@@ -1076,16 +1121,25 @@
                   />
                 </div>
                 <div class="card-footer card-big-footer">
-                  <h2 style="text-align: center">Frissítő ajándékok</h2>
-                  <p style="text-align: center">
-                    Ahogy megérkeztek hozzánk, azonnal érezni fogjátok, hogy
-                    gondoskodunk kényelmetekről. Ajándékba kapjátok tőlünk egy
-                    frissítő palack vizet, hogy mindig hidratáltak maradhassatok
-                    az utazás során. Ezen felül mindenkit megvendégelünk egy
-                    kávé kapszulával is, hiszen tudjuk, hogy az utazás fárasztó,
-                    és egy jó kávé mindig jól jön a felébredéshez és a
-                    feltöltődéshez. Üdvözöljük titeket a kényelem és a
-                    figyelmesség világában!
+                  <p>
+                    Minden érkező vendégünket egy kis meglepetéssel fogadjuk.
+                    Amint becsekkolsz hozzánk, vár rád egy kis ajándékcsomag.
+                    Ebbe a csomagba beletartozik egy frissítő palack víz és egy
+                    kis adag minőségi kávé. Ez azt jelenti, hogy a pihenésed és
+                    felfrissülésed rögtön indulhat, amint megérkeztél.
+                  </p>
+                  <p>
+                    A palack víz szuper gyorsan hidratál, ami kifejezetten
+                    hasznos lehet, ha hosszú utazás áll mögötted. A kávé pedig
+                    remek módja annak, hogy felébredj reggelente, vagy
+                    újratöltődj egy hosszú nap végén.
+                  </p>
+                  <p style="margin: 0px !important">
+                    Ezzel a kis ajándékcsomaggal kifejezzük a
+                    vendégszeretetünket és gondoskodásunkat feléd. Így még
+                    felejthetetlenebbé tesszük a nálunk töltött időt. Reméljük,
+                    hogy ez a kis figyelmesség hozzájárul majd a tartózkodásod
+                    kényelmességéhez és emlékezetességéhez is.
                   </p>
                 </div>
               </div>
